--- a/src/assets/styles/_profile.scss
+++ b/src/assets/styles/_profile.scss
@@ -9,12 +9,22 @@
     margin-bottom: 36px;
   }
 
+  button.accordion {
+    padding-left: 0px;
+  }
+
   & > .container > .row {
     margin-top: 100px;
   }
 
   .accUL {
     background-color: transparent;
+    padding-left: 0px;
+    padding-top: 0px;
+
+    & li {
+      padding-left: 0px;
+    }
 
     & .fTextCard, .fCard {
       width: 100%;
