--- a/src/assets/styles/_var.scss
+++ b/src/assets/styles/_var.scss
@@ -16,3 +16,5 @@ $transparent-grey: rgba(193, 171, 101, 0.2);
 $redheart: #FB4B3B;
 $brown-text: #605532;
 $times: #C6A564;
+
+$color-dark: #161616;
