--- a/src/assets/styles/_modal.scss
+++ b/src/assets/styles/_modal.scss
@@ -40,6 +40,10 @@
   padding: 15px 30px;
 }
 
+.mdl-addon {
+  cursor: pointer;
+}
+
 .mdl-content {
   border-top: 1px solid grey;
   border-bottom: 1px solid grey;
@@ -52,7 +56,7 @@
   }
 
   &.mdl-add-btn {
-    max-height:100px;
+    max-height:160px;
     border-bottom: none;
   }
 
@@ -85,4 +89,5 @@
   color: white!important;
   padding: 7px 50px!important;
   border-radius: 0!important;
+  cursor: pointer;
 }
