--- a/src/assets/styles/_film_view.scss
+++ b/src/assets/styles/_film_view.scss
@@ -224,6 +224,7 @@
 .usWrap {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 textarea {
@@ -261,7 +262,7 @@ textarea {
   font-size: 16px;
   line-height: 20px;
   float: right;
-  margin-top: auto;
+  margin-top: 10px;
   margin-bottom: auto;
 
   &:hover {
