begin of Actors

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -22,6 +22,12 @@
 @import "film_main";
 @import "modal";
 
+//Actors
+@import "actors";
+@import "actorstable";
+@import "actorview";
+@import "actorview";
+
 //LogIn
 @import "login";
 @import "authorization";
