--- a/src/assets/styles/_actorstable.scss
+++ b/src/assets/styles/_actorstable.scss
@@ -2,74 +2,173 @@
   padding: 30px 0;
   background-color: #000000;
 }
+
+#actors-table  .hText{
+  margin-bottom: 40px;
+}
+
 .actors-table--wrap{
   padding: 20px 0;
 }
+
 .actors-table--card---line{
   padding: 0 0 50px 0;
 }
+
 .actors-table--card---item{
   padding: 0 20px;
   text-align: center;
   display: flex;
   flex-direction: column;
+
+  & img {
+    padding: 0 15px;
+    width: 100%;
+    height: auto;
+  }
 }
-.actors-table--card---item img{
-  padding: 0 15px;
-  width: 100%;
-  height: auto;
+
+.actors-table--name{
+ & a{
+   font-size: 14px;
+   font-family: "Playfair Display";
+   color: #ffffff;
+   text-transform: uppercase;
+   padding: 20px 0;
+   transition: color 0.3s linear;
+
+   &:hover{
+     color: $gold;
+     transition: color 0.2s linear;
+     text-decoration: none;
+     transition: color 0.3s linear;
+   }
+  }
 }
-.actors-table--name a{
-  font-size: 14px;
-  font-family: "Playfair Display";
-  color: #ffffff;
-  text-transform: uppercase;
-  padding: 20px 0;
-  transition: color 0.3s linear;
+.actors-table--card {
+  & h3 {
+    font-family: Playfair Display;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 27px;
+    line-height: 30px;
+    text-transform: uppercase;
+    color: #C6A564;
+    cursor: pointer;
+  }
 }
-.actors-table--name a:hover{
-  color: $gold;
-  transition: color 0.2s linear;
-  text-decoration: none;
-  transition: color 0.3s linear;
-}
-.actors-table--card h3{
-  font-family: Playfair Display;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 27px;
-  line-height: 30px;
-  text-transform: uppercase;
-  color: #C6A564;
-  cursor: pointer;
-}
+
 .actors-more{
   padding: 30px 0;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.actors-more li{
-  list-style: none;
-  background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  padding: 10px 19px;
-  margin: 0 10px;
-}
-.actors-more a{
-  color: #707070;
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
-  line-height: 24px;
-  cursor: pointer;
-}
-.actors-more .more-active{
-  background-color: #FFE142;;
-}
-.actors-more a:hover{
-  color: #ffffff;
-  text-decoration: none;
+
+  & li{
+    list-style: none;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    padding: 10px 19px;
+    margin: 0 10px;
+
+    &.more-active{
+      background-color: #FFE142;
+    }
+  }
+
+  & a{
+    color: #707070;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 24px;
+    cursor: pointer;
+    transition: color 0.2s linear;
+
+    &:hover{
+      color: #ffffff;
+      text-decoration: none;
+      transition: color 0.2s linear;
+    }
+  }
 }
 
+@media (max-width: 1200px) {
+  #actors-table .hText{
+    font-size: 40px;
+  }
+
+  .actors-table--card---line{
+    padding: 0 0 40px 0;
+  }
+
+  .actors-table--card---item{
+
+    &.col-3{
+      padding: 0 5px;
+    }
+  }
+
+  .accordion{
+    font-size: 18px;
+  }
+
+  .actors-table--card---item{
+    padding: 20px 0;
+  }
+
+  .actors-table--name{
+
+    & a{
+      font-size: 20px;
+      line-height: 30px;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+
+  #actors-table .accordion{
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 767px) {
+  .actors-table--card---line{
+
+    &.mob{
+      display: none;
+    }
+  }
+
+  .actors-table--card---item{
+
+    & img{
+      width: 70%;
+      margin: 0 auto;
+      padding: 20px 0;
+    }
+  }
+
+  #actors-table .hText{
+    text-align: left;
+    margin-bottom: 20px;
+  }
+
+  #actors-table .accordion{
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 575px){
+  #actors-table .hText{
+    padding-left: 45px;
+  }
+}
+
+@media (max-width: 425px) {
+  .actors-table--card{
+
+  }
+}
