--- a/src/assets/styles/error.scss
+++ b/src/assets/styles/error.scss
@@ -1,5 +1,5 @@
 #error{
-  height: 100vh;
+  height: calc(100vh - 72px);
   width: 100%;
   background: url("../../../public/img/error.png") center no-repeat;
   background-size: cover;
@@ -7,7 +7,7 @@
 .error-wrap{
   background: rgba(0, 0, 0, 0.6);
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 72px) !important;
   padding-top: 150px;
 }
 .error-wrap .container{
