--- a/src/assets/styles/_film_view.scss
+++ b/src/assets/styles/_film_view.scss
@@ -164,7 +164,13 @@
 
   &.rComment {
     border: 1px solid rgba(255, 255, 255, 0.1);
-    padding: 30px 20px;
+    padding: 15px 10px;
+
+    & .cTextWrap {
+      & p {
+        margin: 0;
+      }
+    }
   }
 
   & p {
@@ -209,6 +215,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  & p:last-child {
+    margin: 0;
+  }
 }
 
 #cForm {
