--- a/src/assets/styles/_actorview.scss
+++ b/src/assets/styles/_actorview.scss
@@ -1,3 +1,6 @@
+#actor-view, #producer-view{
+  padding-top: 50px;
+}
 .actor-info--films{
   display: flex;
   align-items: center;
@@ -34,6 +37,9 @@
     }
   }
 }
+.actor-description .hText{
+    text-align: left;
+}
 .actor-info--img{
   height: auto;
   width: 100%;
@@ -69,7 +75,6 @@
   border-radius: 20px;
   padding: 10px 25px;
 }
-
 .like i{
   color: #007700;
   padding: 0 5px;
@@ -85,7 +90,9 @@
   background: transparent;
   color: rgba(245, 245, 247, 0.5);
 }
-
+.margin{
+  margin-top: 80px;
+}
 #actor-view, #producer-view .usWrap {
   display: flex;
   padding: 25px;
@@ -94,11 +101,9 @@
   justify-content: center;
   align-items: center;
 }
-
 #actor-view, #producer-view .btn-comment{
   margin-top: 20px;
 }
-
 @media (max-width: 991px) {
   #actor-view, #producer-view .hText{
     margin-bottom: 40px;
@@ -111,36 +116,37 @@
   }
 }
 
-
 @media (max-width: 767px) {
   .actor-description .imgWrap{
     display: flex;
     flex-direction: column;
   }
-
-  #actor-view, #producer-view .imgWrap img{
-    width: 60%;
-  }
-
-  #actor-view, #producer-view .hText{
-    margin-top: 40px;
+  .actor-description .hText{
     text-align: center;
   }
-
-  .actor-info--img---wrap{
-
-    & img{
-      width: 60%;
-    }
+  #actor-view .img-fluid{
+    margin-bottom: 0;
+    width: 80%;
   }
-
+  #producer-view .img-fluid{
+    margin-bottom: 0;
+    width: 80%;
+  }
   .fTable table td{
     font-size: 16px;
   }
-
   .actor-info--films{
     & img{
       width: 90%;
+    }
+  }
+  .actor-rating{
+    padding: 35px 0;
+  }
+  #actor-view, #producer-view .usWrap{
+    padding: 0;
+    & p{
+      padding-bottom: 15px;
     }
   }
 }
@@ -149,25 +155,21 @@
   .actor-info--films {
     flex-direction: column;
   }
-
   .actor-info--films---wrap {
     width: 80%;
   }
-
   .mob {
     display: none;
   }
-
-  #actor-view, #producer-view .usWrap{
-    padding: 0;
-  }
-
   .usWrap .profile-img{
     display: none;
   }
-
-  #actor-view, #producer-view .comment p{
-    font-size: 18px;
+  #actor-view .usWrap p{
     width: 100%;
+    text-align: left;
+  }
+  #producer-view .usWrap p{
+    width: 100%;
+    text-align: left;
   }
 }
