--- a/src/assets/styles/_film_view.scss
+++ b/src/assets/styles/_film_view.scss
@@ -119,12 +119,12 @@
       font-family: 'Font Awesome 5 Free';
     }
 
-    &:hover::before {
+    /*&:hover::before {
       content: "\f005";
       left: 0;
       color: $gold;
       font-weight: bold;
-    }
+    }*/
   }
 }
 
